--- a/List.html
+++ b/List.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 	<head>
+		<!-- Lien vers la page CSS -->
 		<link href="style-List.css" rel="stylesheet">
 		
 		<title>List</title>
@@ -8,9 +9,11 @@
 	<body>
 		<h1>Christmas List</h1>
 		</br>
-		<p><input type="checkbox" name="check1" value="1">Toy</p>
-		<p><input type="checkbox" name="check2" value="2">Game</p>
-		<p><input type="checkbox" name="check3" value="3">Plushie</p>
+		<p>
+			<input type="checkbox" name="check1" value="1">Toy<br>
+			<input type="checkbox" name="check2" value="2">Game<br>
+			<input type="checkbox" name="check3" value="3">Plushie<br>
+		</p>
 		</br>		
 	</body>
 </html>
