--- a/List.html
+++ b/List.html
@@ -1,14 +1,28 @@
 <!DOCTYPE html>
 <html lang="en">
-	<head>
-		<!-- Lien vers la page CSS -->
+	<head>	
+		<meta charset="utf-8">
+		<meta http-equiv="X-UA-Compatible" content="IE=edge">
+		<meta name="viewport" content="width=device-width, initial-scale=1">
+	 
+		<!-- Bootstrap -->
+		<link href="bootstrap-3.3.7-dist/css/bootstrap.min.css" rel="stylesheet">
+	 
+		<!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
+		<!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
+		<!--[if lt IE 9]>
+		  <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
+		  <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
+		<![endif]-->
+	
+		<!-- Link to my CSS sheet -->
 		<link href="style-List.css" rel="stylesheet">
 		
 		<title>List</title>
 	</head>
 	<body>
 		<h1>Christmas List</h1>
-		</br>
+		<br />
 		
 		<!-- Javascript -->
 		<script>
@@ -23,24 +37,30 @@
 			document.getElementById("addText").value = "";			
 			
 			// add element in the list
-			list.innerHTML += '<li><input type="checkbox" name="check' + (nbInList + 1) +'" value="' + (nbInList + 1) +'">' + toAdd + '</li>';
+			list.innerHTML += '<li class="list-group-item"><input type="checkbox" name="check' + (nbInList + 1) +'" value="' + (nbInList + 1) +'">' + toAdd + '</li>';
 		}
 		</script>
 		
 		<!-- List -->
-		<ul id="list" style="list-style-type:none">
-			<li><input type="checkbox" name="check1" value="1">Toy</li>
-			<li><input type="checkbox" name="check2" value="2">Game</li>
-			<li><input type="checkbox" name="check3" value="3">Plushie</li>
-		</ul>
-		</br>
+		<div class="container-fluid">
+			<ul class="list-group" id="list" style="list-style-type:none">
+				<li class="list-group-item"><input type="checkbox" name="check1" value="1">Toy</li>
+				<li class="list-group-item"><input type="checkbox" name="check2" value="2">Game</li>
+				<li class="list-group-item"><input type="checkbox" name="check3" value="3">Plushie</li>
+			</ul>
+		</div>
+		<br />
 		
 		<!-- Add area -->
-		<p>
-		<input type="text" id="addText" maxlength="25" cols="25"></textarea>
-		<button onclick="Add(addText.value, list)">Add</button>
-		</p>
-		</br>
+		<div class="container-fluid">
+			<div class="input-group">
+				<input type="text" id="addText" class="form-control" maxlength="25" placeholder="Enter text here..."></input>
+				<span class="input-group-btn">
+					<button class="btn btn-default" type="button" onclick="Add(addText.value, list)">Add</button>
+				</span>
+			</div>
+		</div>
+		<br />
 		
 		<!-- Debug -->
 		<!-- - will display the elements added in the list and its place -->
@@ -48,5 +68,10 @@
 		
 		<!-- This will be displayed if the executing browser does not support Javascript -->
 		<noscript>... no JS... ...wut?</noscript>
+		
+		<!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
+		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
+		<!-- Include all compiled plugins (below), or include individual files as needed -->
+		<script src="js/bootstrap.min.js"></script>
 	</body>
 </html>
