--- a/List.html
+++ b/List.html
@@ -22,17 +22,50 @@
 	</head>
 	<body>
 		<h1>Christmas List</h1>
-		<br />
+		</br>
 		
 		<!-- List -->
 		<div class="container-fluid">
 			<ul class="list-group" id="list">
-				<li class="list-group-item"><input type="checkbox" name="check1" value="1">Toy</li>
-				<li class="list-group-item"><input type="checkbox" name="check2" value="2">Game</li>
-				<li class="list-group-item"><input type="checkbox" name="check3" value="3">Plushie</li>
+				<li class="list-group-item" id="element1">
+					<div class="input-group">
+						<span class="glyphicon glyphicon-menu-hamburger" aria-hidden="true" draggable="true" ondragstart="Drag(event)"></span>
+						<span class="input-group-adon">
+							<input type="checkbox" value="1">
+						</span>
+						Toy
+						<span class="input-group-btn">
+							<button class="btn btn-default" type="button" onclick="Erase(element1, list)">Erase</button>
+						</span>
+					</div>
+				</li>
+				<li class="list-group-item" id="element2">
+					<div class="input-group">
+						<span class="glyphicon glyphicon-menu-hamburger" aria-hidden="true" draggable="true" ondragstart="Drag(event)"></span>
+						<span class="input-group-adon">
+							<input type="checkbox" value="2">
+						</span>
+						Game
+						<span class="input-group-btn">
+							<button class="btn btn-default" type="button" onclick="Erase(element2, list)">Erase</button>
+						</span>
+					</div>					
+				</li>
+				<li class="list-group-item"id="element3">
+					<div class="input-group">
+						<span class="glyphicon glyphicon-menu-hamburger" aria-hidden="true" draggable="true" ondragstart="Drag(event)"></span>
+						<span class="input-group-adon">
+							<input type="checkbox" value="3">
+						</span>
+						Plushie
+						<span class="input-group-btn">
+							<button class="btn btn-default" type="button" onclick="Erase(element3, list)">Erase</button>
+						</span>
+					</div>
+				</li>
 			</ul>
 		</div>
-		<br />
+		</br>
 		
 		<!-- Add area -->
 		<div class="container-fluid">
@@ -43,8 +76,8 @@
 				</span>
 			</div>
 		</div>
-		<br />
-		
+		</br>
+				
 		<!-- Debug -->
 		<!-- - will display the elements added in the list and its place -->
 		<p id="demo"></p>
