Renamed files and clearing bugs

--- a/List_bootstrap.html
+++ b/List_bootstrap.html
@@ -27,8 +27,8 @@
 		<!-- List -->
 		<div class="container-fluid">
 			<ul class="list-group" id="list">
-				<li class="list-group-item" id="element1" ondrop="Drop(event, element1)" ondragover="AllowDrop(event)">
-					<div class="input-group">
+				<li class="list-group-item" id="element1">
+					<div class="input-group" ondrop="Drop(event, element1)" ondragover="AllowDrop(event)">
 						<span class="glyphicon glyphicon-menu-hamburger" aria-hidden="true" draggable="true" ondragstart="Drag(element1)"></span>
 						<span class="input-group-adon">
 							<input type="checkbox" name="1" value="Toy">Toy
@@ -38,8 +38,8 @@
 						</span>
 					</div>
 				</li>
-				<li class="list-group-item" id="element2" ondrop="Drop(event, element2)" ondragover="AllowDrop(event)">
-					<div class="input-group">
+				<li class="list-group-item" id="element2">
+					<div class="input-group" ondrop="Drop(event, element2)" ondragover="AllowDrop(event)">
 						<span class="glyphicon glyphicon-menu-hamburger" aria-hidden="true" draggable="true" ondragstart="Drag(element2)"></span>
 						<span class="input-group-adon">
 							<input type="checkbox" name="2" value="Game">Game
@@ -49,8 +49,8 @@
 						</span>
 					</div>					
 				</li>
-				<li class="list-group-item"id="element3" ondrop="Drop(event, element3)" ondragover="AllowDrop(event)">
-					<div class="input-group">
+				<li class="list-group-item"id="element3">
+					<div class="input-group" ondrop="Drop(event, element3)" ondragover="AllowDrop(event)">
 						<span class="glyphicon glyphicon-menu-hamburger" aria-hidden="true" draggable="true" ondragstart="Drag(element3)"></span>
 						<span class="input-group-adon">
 							<input type="checkbox" name="3" value="Plushie">Plushie
@@ -90,6 +90,6 @@
 		<script src="bootstrap-3.3.7-dist/js/bootstrap.min.js"></script>
 		
 		<!-- Javascript -->
-		<script src="List-functions.js"></script>
+		<script src="List_functions_bootstrap.js"></script>
 	</body>
 </html>
